--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,481 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <meta
+      name="description"
+      content="Innovative Luna speaker system. High-quality sound, stylish design and advanced technology. Learn more!"
+    />
+    <link
+      rel="icon"
+      href="images/favicon.ico"
+      type="image/x-icon"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    >
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    >
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    >
+    <title>Creative Bakery</title>
     <link
       rel="stylesheet"
-      href="./styles/main.scss"
+      href="styles/index.css"
     />
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header" id="Header">
+      <div class="top-bar">
+        <a class="logo">
+          <img
+            src="images/Logo.png"
+            alt="Logo"
+            class="logo-img">
+        </a>
+
+        <nav class="nav header-nav">
+          <ul class="menu-list">
+            <li class="menu-item">
+              <a href="#ProductCards" class="menu-link">
+                Products
+              </a>
+            </li>
+            <li class="menu-item">
+              <a href="#About" class="menu-link">
+                About Us
+              </a>
+            </li>
+            <li class="menu-item">
+              <a href="#" class="menu-link">
+                Blog
+              </a>
+            </li>
+            <li class="menu-item">
+              <a href="#Footer" class="menu-link menu-link-phone">
+                <img
+                  src="images/icon-phone.png"
+                  alt="Icon phone"
+                  class="icon-phone-img"
+                >
+                Contact us
+              </a>
+            </li>
+          </ul>
+        </nav>
+
+        <a
+          href="#Menu"
+          class="burger-button top-bar-btn"
+          id="burgerButton"
+        >
+          <img
+            src="images/burger.png"
+            alt="Burger menu img"
+            class="burger-img top-bar-btn--img"
+          >
+        </a>
+      </div>
+
+      <div class="header__description">
+        <p class="header__text">
+          We bake your fantasies — croissants, cakes, cookies, and cupcakes.
+        </p>
+        <div class="header__title-img-wrapper">
+          <h1 class="header__title">Creative bakery</h1>
+          <div class="header__img-box">
+          </div>
+        </div>
+        <button class="header__btn">
+          <svg
+            class="btn-img"
+            width="20"
+            height="20"
+            viewBox="0 0 20 20"
+            fill="currentColor"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M19.9422 9.99259C17.209 9.95939 15.002 7.73912 15.002 4.99816C12.261 4.99816 10.041 2.79156 10.0074 0.0588002C8.94261 -0.102915 7.85394 0.0705187 6.8934 0.559572L4.19302 1.93533C3.22092 2.43072 2.43068 3.22123 1.93561 4.19349L0.564523 6.88406C0.0679844 7.85879 -0.107312 8.96566 0.0637442 10.0461L0.535617 13.0253C0.706504 14.1047 1.21462 15.1023 1.98717 15.8753L4.12662 18.0143C4.89673 18.7847 5.89098 19.2914 6.96684 19.4619L9.96331 19.9365C11.0379 20.1069 12.1391 19.9322 13.109 19.4381L15.8094 18.0627C16.7814 17.5672 17.5716 16.7768 18.0668 15.8046L19.4379 13.114C19.9285 12.1515 20.1023 11.0602 19.9422 9.99259ZM6.87504 14.3745C6.18481 14.3745 5.62505 13.8148 5.62505 13.1246C5.62505 12.4343 6.18481 11.8746 6.87504 11.8746C7.56527 11.8746 8.12503 12.4343 8.12503 13.1246C8.12503 13.8148 7.56527 14.3745 6.87504 14.3745ZM8.12503 8.12466C7.4348 8.12466 6.87504 7.56491 6.87504 6.87468C6.87504 6.18446 7.4348 5.62471 8.12503 5.62471C8.81526 5.62471 9.37503 6.18446 9.37503 6.87468C9.37503 7.56491 8.81526 8.12466 8.12503 8.12466ZM14.375 13.1246C13.6848 13.1246 13.125 12.5648 13.125 11.8746C13.125 11.1844 13.6848 10.6246 14.375 10.6246C15.0652 10.6246 15.625 11.1844 15.625 11.8746C15.625 12.5648 15.0652 13.1246 14.375 13.1246Z"/>
+          </svg>
+          Learn more
+        </button>
+      </div>
+    </header>
+
+    <aside class="menu" id="Menu">
+      <div class="top-bar">
+        <a class="logo">
+          <img
+            src="images/Logo.png"
+            alt="Logo"
+            class="logo-img">
+        </a>
+
+        <a
+          href="#"
+          class="close-button top-bar-btn"
+          id="closeButton"
+        >
+          <img
+            src="images/close.png"
+            alt="Close menu img"
+            class="close-img top-bar-btn--img"
+          >
+        </a>
+      </div>
+
+      <nav class="nav aside-nav">
+          <ul class="menu-list">
+            <li class="menu-item">
+              <a href="#ProductCards" class="menu-link">
+                Products
+              </a>
+            </li>
+            <li class="menu-item">
+              <a href="#About" class="menu-link">
+                About Us
+              </a>
+            </li>
+            <li class="menu-item">
+              <a href="#" class="menu-link">
+                Blog
+              </a>
+            </li>
+            <li class="menu-item">
+              <a href="#Footer" class="menu-link menu-link-phone">
+                <img
+                  src="images/icon-phone.png"
+                  alt="Icon phone"
+                  class="icon-phone-img"
+                >
+                Contact us
+              </a>
+            </li>
+          </ul>
+        </nav>
+
+    </aside>
+
+    <main class="main" id="Main">
+      <section class="product-cards" id="ProductCards">
+        <h2 class="product-cards__title">What we bake</h2>
+        <h3
+          class="product-cards__description"
+        >
+          We can customize our cookies right for your needs. Just imagine it
+        </h3>
+
+        <div class="product-cards__block">
+          <div class="box product-card--left">
+            <div class="product-card">
+              <div class="product-card__img-box">
+                <img
+                  src="images/product-card-img/Photo-1.png"
+                  alt="Oatmeal cookies"
+                  class="product-card__img"
+                >
+              </div>
+              <h4 class="product-card__product-name">Cakes</h4>
+              <p class="product-card__description">
+                Oatmeal cookies with golden raisins, orange zest and chocolate chips
+              </p>
+              <button class="product-card__btn">
+                <img
+                  src="images/Icon-arrow.png"
+                  alt="Icon arrow"
+                  class="btn-img"
+                >
+                Order
+              </button>
+            </div>
+            <div class="product-card">
+              <div class="product-card__img-box">
+                <img
+                  src="images/product-card-img/Photo-2.png"
+                  alt="Chocolate biscuit"
+                  class="product-card__img"
+                >
+              </div>
+
+              <h4 class="product-card__product-name">Cakes</h4>
+              <p class="product-card__description">
+                Chocolate biscuit coffee cake topped with a buttercream and powder
+              </p>
+              <button class="product-card__btn">
+                <img
+                  src="images/Icon-arrow.png"
+                  alt="Icon arrow"
+                  class="btn-img"
+                >
+                Order
+              </button>
+            </div>
+          </div>
+
+          <div class="box product-card--right">
+            <div class="product-card">
+              <h3 class="product-card__title"></h3>
+              <div
+                class="product-card__img-box"
+              >
+                <img
+                  src="images/product-card-img/Photo-3.png"
+                  alt="Light multi-layered croissant"
+                  class="product-card__img"
+                >
+              </div>
+              <h4 class="product-card__product-name">Donuts</h4>
+              <p class="product-card__description">
+                Light multi-layered croissant strewn with cinammon and almond “petals”
+              </p>
+              <button class="product-card__btn">
+                <img
+                  src="images/Icon-arrow.png"
+                  alt="Icon arrow"
+                  class="btn-img"
+                >
+                Order
+              </button>
+            </div>
+            <div class="product-card">
+              <div class="product-card__img-box">
+                <img
+                  src="images/product-card-img/Photo-4.png"
+                  alt="Light multi-layered croissant"
+                  class="product-card__img"
+                >
+              </div>
+              <h4 class="product-card__product-name">Donuts</h4>
+              <p class="product-card__description">
+                Light multi-layered croissant strewn with coconut and nuts          </p>
+              <button class="product-card__btn">
+                <img
+                  src="images/Icon-arrow.png"
+                  alt="Light multi-layered croissant"
+                  class="btn-img"
+                >
+                Order
+              </button>
+            </div>
+          </div>
+
+          <div class="box product-card--left">
+            <div class="product-card">
+              <div class="product-card__img-box">
+                <img
+                  src="images/product-card-img/Photo-5.png"
+                  alt="Chocolate salted caramel"
+                  class="product-card__img">
+              </div>
+              <h4 class="product-card__product-name">Cakes</h4>
+              <p class="product-card__description">
+                Chocolate salted caramel, Vanilla frutti pebbles
+              </p>
+              <button class="product-card__btn">
+                <img
+                  src="images/Icon-arrow.png"
+                  alt="Light multi-layered croissant"
+                  class="btn-img"
+                >Order</button>
+            </div>
+            <div class="product-card">
+              <div class="product-card__img-box">
+                <img
+                  src="images/product-card-img/Photo-6.png"
+                  alt="Oatmeal cookies with golden raisins"
+                  class="product-card__img">
+              </div>
+              <h4 class="product-card__product-name">Cookies</h4>
+              <p class="product-card__description">
+                Oatmeal cookies with golden raisins, orange zest and chocolate chips          </p>
+              <button class="product-card__btn">
+                <img
+                  src="images/Icon-arrow.png"
+                  alt="Light multi-layered croissant"
+                  class="btn-img"
+                >Order</button>
+            </div>
+          </div>
+        </div>
+
+      </section>
+
+      <section class="about" id="About">
+        <div class="about__description">
+          <h2 class="about__title">
+            Few words About us
+          </h2>
+          <p class="about__text">
+            Like many design teams, Onfido made the transition from Abstract + Sketch, to Figma in the last couple of years. One of the common resistance points internally before making that switch, was Figma’s lack of Git-style branching that Abstract enabled. The design team had come to rely on branching and had built a lot of our processes around it.
+          </p>
+        </div>
+
+        <div class="about__info">
+          <div class="about__item">
+            <p class="about__value">2015</p>
+            <p class="about__label">Foundation year</p>
+          </div>
+          <div class="about__item">
+            <p class="about__value">23</p>
+            <p class="about__label">Stores</p>
+          </div>
+          <div class="about__item">
+            <p class="about__value">155</p>
+            <p class="about__label">Companies</p>
+          </div>
+          <div class="about__item">
+            <p class="about__value">10k+</p>
+            <p class="about__label">Clients</p>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer" id="Footer">
+      <div class="footer__menu">
+        <a
+          href="#Header"
+          class="footer__title">
+          <img
+            src="images/Logo-footer.png"
+            alt="Logo"
+            class="logo-img">
+        </a>
+        <ul class="footer__list">
+          <li class="footer__item">
+            <p class="footer__item-title">Menu</p>
+          </li>
+          <li class="footer__item">
+            <a
+              href="#ProductCards"
+              class="footer__link"
+            >
+              Products
+            </a>
+          </li>
+          <li class="footer__item">
+            <a
+              href="#About"
+              class="footer__link"
+            >
+              About Us
+            </a>
+          </li>
+          <li class="footer__item">
+            <a
+              href="#"
+              class="footer__link"
+            >
+              Blog
+            </a>
+          </li>
+          <li class="footer__item">
+            <a
+              href="#"
+              class="footer__link"
+            >
+              Terms & Privacy
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <h2 class="footer__title contact-title">Contact us</h2>
+      <div class="footer__contacts">
+        <ul class="footer__list">
+          <li class="footer__item">
+            <p class="footer__item-title">Call us</p>
+          </li>
+          <li class="footer__item">
+            <a
+              href="tel:6295550129"
+              class="footer__link">
+              (629) 555-0129
+            </a>
+          </li>
+          <li class="footer__item">
+            <a
+              href="tel:6035550123"
+              class="footer__link">
+              (603) 555-0123
+            </a>
+          </li>
+          <li class="footer__item">
+            <a
+              href="tel:7045550127"
+              class="footer__link">
+              (704) 555-0127
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="footer__email">
+        <p class="footer__item-title">Email us</p>
+        <p class="footer__link no-hover">bakerlab@example.com</p>
+      </div>
+
+      <div class="footer__socials">
+        <a
+          href="https://www.facebook.com/thebakersla"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="footer__social-link"
+        >
+          <svg
+            class="socials-icon"
+            width="11"
+            height="20"
+            viewBox="0 0 11 20"
+            fill="currentColor"
+            xmlns="http://www.w3.org/2000/svg">
+            <path d="M7 11.5H9.5L10.5 7.5H7V5.5C7 4.47 7 3.5 9 3.5H10.5V0.14C10.174 0.0970001 8.943 0 7.643 0C4.928 0 3 1.657 3 4.7V7.5H0V11.5H3V20H7V11.5Z"/>
+          </svg>
+        </a>
+        <a
+          href="https://www.instagram.com/dbakerslabbyanj/?hl=en&utm_source=chatgpt.com"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="footer__social-link"
+        >
+          <svg
+            class="socials-icon"
+            width="20"
+            height="20"
+            viewBox="0 0 20 20"
+            fill="currentColor"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path d="M10 0C12.717 0 13.056 0.00999994 14.122 0.0599999C15.187 0.11 15.912 0.277 16.55 0.525C17.21 0.779 17.766 1.123 18.322 1.678C18.8305 2.1779 19.224 2.78259 19.475 3.45C19.722 4.087 19.89 4.813 19.94 5.878C19.987 6.944 20 7.283 20 10C20 12.717 19.99 13.056 19.94 14.122C19.89 15.187 19.722 15.912 19.475 16.55C19.2247 17.2178 18.8311 17.8226 18.322 18.322C17.822 18.8303 17.2173 19.2238 16.55 19.475C15.913 19.722 15.187 19.89 14.122 19.94C13.056 19.987 12.717 20 10 20C7.283 20 6.944 19.99 5.878 19.94C4.813 19.89 4.088 19.722 3.45 19.475C2.78233 19.2245 2.17753 18.8309 1.678 18.322C1.16941 17.8222 0.775931 17.2175 0.525 16.55C0.277 15.913 0.11 15.187 0.0599999 14.122C0.0129999 13.056 0 12.717 0 10C0 7.283 0.00999994 6.944 0.0599999 5.878C0.11 4.812 0.277 4.088 0.525 3.45C0.775236 2.78218 1.1688 2.17732 1.678 1.678C2.17767 1.16923 2.78243 0.775729 3.45 0.525C4.088 0.277 4.812 0.11 5.878 0.0599999C6.944 0.0129999 7.283 0 10 0ZM10 5C8.67392 5 7.40215 5.52678 6.46447 6.46447C5.52678 7.40215 5 8.67392 5 10C5 11.3261 5.52678 12.5979 6.46447 13.5355C7.40215 14.4732 8.67392 15 10 15C11.3261 15 12.5979 14.4732 13.5355 13.5355C14.4732 12.5979 15 11.3261 15 10C15 8.67392 14.4732 7.40215 13.5355 6.46447C12.5979 5.52678 11.3261 5 10 5ZM16.5 4.75C16.5 4.41848 16.3683 4.10054 16.1339 3.86612C15.8995 3.6317 15.5815 3.5 15.25 3.5C14.9185 3.5 14.6005 3.6317 14.3661 3.86612C14.1317 4.10054 14 4.41848 14 4.75C14 5.08152 14.1317 5.39946 14.3661 5.63388C14.6005 5.8683 14.9185 6 15.25 6C15.5815 6 15.8995 5.8683 16.1339 5.63388C16.3683 5.39946 16.5 5.08152 16.5 4.75ZM10 7C10.7956 7 11.5587 7.31607 12.1213 7.87868C12.6839 8.44129 13 9.20435 13 10C13 10.7956 12.6839 11.5587 12.1213 12.1213C11.5587 12.6839 10.7956 13 10 13C9.20435 13 8.44129 12.6839 7.87868 12.1213C7.31607 11.5587 7 10.7956 7 10C7 9.20435 7.31607 8.44129 7.87868 7.87868C8.44129 7.31607 9.20435 7 10 7Z"/>
+          </svg>
+        </a>
+        <a
+          href="https://x.com/i/flow/login?redirect_after_login=%2Fthebakerlab"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="footer__social-link"
+        >
+          <svg
+            class="socials-icon"
+            width="22"
+            height="18"
+            viewBox="0 0 22 18"
+            fill="currentColor"
+            xmlns="http://www.w3.org/2000/svg">
+            <path d="M21.1618 2.65593C20.3984 2.99362 19.5888 3.2154 18.7598 3.31393C19.6336 2.79136 20.2875 1.96894 20.5998 0.999927C19.7798 1.48793 18.8808 1.82993 17.9438 2.01493C17.3144 1.34151 16.4802 0.89489 15.5708 0.744511C14.6614 0.594133 13.7277 0.748418 12.9151 1.18338C12.1024 1.61834 11.4562 2.30961 11.0769 3.14972C10.6976 3.98983 10.6066 4.93171 10.8178 5.82893C9.15492 5.74558 7.52814 5.31345 6.0431 4.56059C4.55805 3.80773 3.24794 2.75097 2.19781 1.45893C1.8261 2.09738 1.63076 2.82315 1.63181 3.56193C1.63181 5.01193 2.36981 6.29293 3.49181 7.04293C2.82782 7.02202 2.17844 6.84271 1.59781 6.51993V6.57193C1.59801 7.53763 1.93218 8.47354 2.54366 9.22099C3.15513 9.96843 4.00629 10.4814 4.95281 10.6729C4.33642 10.84 3.69012 10.8646 3.06281 10.7449C3.32968 11.5762 3.84982 12.3031 4.5504 12.824C5.25099 13.3449 6.09694 13.6337 6.96981 13.6499C6.10229 14.3313 5.10899 14.8349 4.04669 15.1321C2.98439 15.4293 1.87394 15.5142 0.778809 15.3819C2.69051 16.6114 4.9159 17.264 7.18881 17.2619C14.8818 17.2619 19.0888 10.8889 19.0888 5.36193C19.0888 5.18193 19.0838 4.99993 19.0758 4.82193C19.8947 4.23009 20.6014 3.49695 21.1628 2.65693L21.1618 2.65593Z"/>
+          </svg>
+
+        </a>
+      </div>
+
+      <p class="footer__credits">© Bakerlab 2022</p>
+    </footer>
     <script src="scripts/main.js"></script>
   </body>
 </html>
