--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,594 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Creative Bakery</title>
+
+    <link
+      href="https://unpkg.com/aos@2.3.1/dist/aos.css"
+      rel="stylesheet"
+    />
+
+    <link
+      rel="icon"
+      type="image/png"
+      href="/public/favicon.png"
+    />
+
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+    <header class="header">
+      <a
+        href="./"
+        class="header__logo"
+      >
+        <svg
+          width="136"
+          height="36"
+        >
+          <use href="./images/icons/symbol-defs.svg#icon-header-logo"></use>
+        </svg>
+      </a>
+      <nav class="header__nav">
+        <ul class="header__list">
+          <li>
+            <a
+              href="#products"
+              class="header__link"
+            >
+              Products
+            </a>
+          </li>
+          <li>
+            <a
+              href="#about"
+              class="header__link"
+            >
+              About Us
+            </a>
+          </li>
+          <li>
+            <a
+              href="#"
+              class="header__link"
+            >
+              Blog
+            </a>
+          </li>
+          <li>
+            <a
+              href="#contacts"
+              class="second-link"
+            >
+              <svg
+                width="24"
+                height="24"
+              >
+                <use
+                  href="./images/icons/symbol-defs.svg#icon-phone"
+                  fill="currentColor"
+                ></use>
+              </svg>
+              Contact us
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <button
+        class="header__button"
+        id="open-menu"
+      >
+        <svg
+          width="24"
+          height="24"
+        >
+          <use href="./images/icons/symbol-defs.svg#icon-menu"></use>
+        </svg>
+      </button>
+    </header>
+
+    <main>
+      <section class="hero">
+        <div class="hero__container">
+          <p class="hero__text">
+            We bake your fantasies — croissants, cakes, cookies, and cupcakes.
+          </p>
+          <h1 class="hero__title">Creative bakery</h1>
+          <img
+            src="./images/backgrounds/cookie.png"
+            alt="cookies photo"
+            class="hero__img"
+          />
+          <a
+            href="#about"
+            class="main-link hero__link"
+          >
+            <svg
+              width="24"
+              height="24"
+            >
+              <use
+                href="./images/icons/symbol-defs.svg#icon-cookie"
+                fill="currentColor"
+              ></use>
+            </svg>
+            Learn more
+          </a>
+        </div>
+      </section>
+
+      <section
+        class="products"
+        id="products"
+      >
+        <div class="container">
+          <h2 class="title products__title">What we bake</h2>
+          <p class="products__text">
+            We can customize our cookies right for your needs. Just imagine it
+          </p>
+          <ul class="products__list">
+            <li class="products__item">
+              <div class="products__thumb-img">
+                <img
+                  src="./images/products/photo-product-01.jpg"
+                  alt="Oatmeal cookies with golden raisins, orange zest and chocolate chips"
+                  class="products__img"
+                />
+              </div>
+              <div class="products__thumb">
+                <h3 class="subtitle">Cakes</h3>
+                <p>
+                  Oatmeal cookies with golden raisins, orange zest and chocolate
+                  chips
+                </p>
+              </div>
+              <a
+                href="#contacts"
+                class="second-link"
+              >
+                <svg
+                  width="24"
+                  height="24"
+                >
+                  <use
+                    href="./images/icons/symbol-defs.svg#icon-arrow"
+                    fill="currentColor"
+                  ></use>
+                </svg>
+                Order
+              </a>
+            </li>
+            <li class="products__item">
+              <div class="products__thumb-img">
+                <img
+                  src="./images/products/photo-product-02.jpg"
+                  alt="Chocolate biscuit coffee cake topped with a buttercream and powder"
+                  class="products__img"
+                />
+              </div>
+              <div class="products__thumb">
+                <h3 class="subtitle">Cakes</h3>
+                <p>
+                  Chocolate biscuit coffee cake topped with a buttercream and
+                  powder
+                </p>
+              </div>
+              <a
+                href="#contacts"
+                class="second-link"
+              >
+                <svg
+                  width="24"
+                  height="24"
+                >
+                  <use
+                    href="./images/icons/symbol-defs.svg#icon-arrow"
+                    fill="currentColor"
+                  ></use>
+                </svg>
+                Order
+              </a>
+            </li>
+            <li class="products__item">
+              <div class="products__thumb-img">
+                <img
+                  src="./images/products/photo-product-03.jpg"
+                  alt="Light multi-layered croissant strewn with cinammon and almond petals"
+                  class="products__img"
+                />
+              </div>
+              <div class="products__thumb">
+                <h3 class="subtitle">Donuts</h3>
+                <p>
+                  Light multi-layered croissant strewn with cinammon and almond
+                  “petals”
+                </p>
+              </div>
+              <a
+                href="#contacts"
+                class="second-link"
+              >
+                <svg
+                  width="24"
+                  height="24"
+                >
+                  <use
+                    href="./images/icons/symbol-defs.svg#icon-arrow"
+                    fill="currentColor"
+                  ></use>
+                </svg>
+                Order
+              </a>
+            </li>
+            <li class="products__item">
+              <div class="products__thumb-img">
+                <img
+                  src="./images/products/photo-product-04.jpg"
+                  alt="Light multi-layered croissant strewn with coconut and nuts"
+                  class="products__img"
+                />
+              </div>
+              <div class="products__thumb">
+                <h3 class="subtitle">Donuts</h3>
+                <p>
+                  Light multi-layered croissant strewn with coconut and nuts
+                </p>
+              </div>
+              <a
+                href="#contacts"
+                class="second-link"
+              >
+                <svg
+                  width="24"
+                  height="24"
+                >
+                  <use
+                    href="./images/icons/symbol-defs.svg#icon-arrow"
+                    fill="currentColor"
+                  ></use>
+                </svg>
+                Order
+              </a>
+            </li>
+            <li class="products__item">
+              <div class="products__thumb-img">
+                <img
+                  src="./images/products/photo-product-05.jpg"
+                  alt="Chocolate salted caramel, Vanilla frutti pebbles"
+                  class="products__img"
+                />
+              </div>
+              <div class="products__thumb">
+                <h3 class="subtitle">Cakes</h3>
+                <p>Chocolate salted caramel, Vanilla frutti pebbles</p>
+              </div>
+              <a
+                href="#contacts"
+                class="second-link"
+              >
+                <svg
+                  width="24"
+                  height="24"
+                >
+                  <use
+                    href="./images/icons/symbol-defs.svg#icon-arrow"
+                    fill="currentColor"
+                  ></use>
+                </svg>
+                Order
+              </a>
+            </li>
+            <li class="products__item">
+              <div class="products__thumb-img">
+                <img
+                  src="./images/products/photo-product-06.jpg"
+                  alt="Oatmeal cookies with golden raisins, orange zest and chocolate chips"
+                  class="products__img"
+                />
+              </div>
+              <div class="products__thumb">
+                <h3 class="subtitle">Cookies</h3>
+                <p>
+                  Oatmeal cookies with golden raisins, orange zest and chocolate
+                  chips
+                </p>
+              </div>
+              <a
+                href="#contacts"
+                class="second-link"
+              >
+                <svg
+                  width="24"
+                  height="24"
+                >
+                  <use
+                    href="./images/icons/symbol-defs.svg#icon-arrow"
+                    fill="currentColor"
+                  ></use>
+                </svg>
+                Order
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section
+        class="about"
+        id="about"
+      >
+        <div class="container about__container">
+          <h2 class="about__title title">Few words About us</h2>
+          <p class="about__text">
+            Like many design teams, Onfido made the transition from Abstract +
+            Sketch, to Figma in the last couple of years. One of the common
+            resistance points internally before making that switch, was Figma’s
+            lack of Git-style branching that Abstract enabled. The design team
+            had come to rely on branching and had built a lot of our processes
+            around it.
+          </p>
+          <ul class="about__list">
+            <li class="about__item">
+              <p class="about__count">2015</p>
+              <p class="about__decs">Foundation year</p>
+            </li>
+            <li class="about__item">
+              <p class="about__count">23</p>
+              <p class="about__decs">Stores</p>
+            </li>
+            <li class="about__item">
+              <p class="about__count">155</p>
+              <p class="about__decs">Companies</p>
+            </li>
+            <li class="about__item">
+              <p class="about__count">10k+</p>
+              <p class="about__decs">Clients</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="container footer__container">
+        <div>
+          <a
+            href="./"
+            class="footer__logo"
+          >
+            <svg
+              width="136"
+              height="36"
+            >
+              <use href="./images/icons/symbol-defs.svg#icon-header-logo"></use>
+            </svg>
+          </a>
+          <nav class="footer__list">
+            <p class="subtitle">Menu</p>
+            <ul class="footer__list">
+              <li>
+                <a
+                  href="#products"
+                  class="footer__link"
+                >
+                  Products
+                </a>
+              </li>
+              <li>
+                <a
+                  href="#about"
+                  class="footer__link"
+                >
+                  About Us
+                </a>
+              </li>
+              <li>
+                <a
+                  href="#"
+                  class="footer__link"
+                >
+                  Blog
+                </a>
+              </li>
+              <li>
+                <a
+                  href="#"
+                  class="footer__link"
+                >
+                  Terms & Privacy
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+
+        <div
+          class="footer__info"
+          id="contacts"
+        >
+          <h2 class="title footer__title">Contact us</h2>
+          <div class="footer__list">
+            <p class="subtitle">Call us</p>
+            <ul class="footer__list">
+              <li>
+                <a
+                  href="tel:(629)5550129"
+                  class="footer__link"
+                >
+                  (629) 555-0129
+                </a>
+              </li>
+              <li>
+                <a
+                  href="tel:(603)5550123"
+                  class="footer__link"
+                >
+                  (603) 555-0123
+                </a>
+              </li>
+              <li>
+                <a
+                  href="tel:(704)5550127"
+                  class="footer__link"
+                >
+                  (704) 555-0127
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer__list">
+            <p class="subtitle">Email us</p>
+            <a
+              href="mailto:bakerlab@example.com"
+              class="footer__link"
+            >
+              bakerlab@example.com
+            </a>
+          </div>
+        </div>
+
+        <ul class="footer__social-list">
+          <li>
+            <a
+              href="https://www.facebook.com/"
+              target="_blank"
+              class="footer__social-link"
+            >
+              <svg
+                width="24"
+                height="24"
+              >
+                <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/"
+              target="_blank"
+              class="footer__social-link"
+            >
+              <svg
+                width="24"
+                height="24"
+              >
+                <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://x.com/"
+              target="_blank"
+              class="footer__social-link"
+            >
+              <svg
+                width="24"
+                height="24"
+              >
+                <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+
+        <p class="footer__text">© Bakerlab 2022</p>
+      </div>
+    </footer>
+
+    <div
+      class="mobile-menu"
+      id="mobile-menu"
+    >
+      <div class="mobile-menu__header">
+        <a
+          href="./"
+          class="mobile-menu__logo"
+        >
+          <svg
+            width="136"
+            height="36"
+          >
+            <use href="./images/icons/symbol-defs.svg#icon-header-logo"></use>
+          </svg>
+        </a>
+        <button
+          class="icon mobile-menu__close-btn"
+          aria-label="Close menu"
+          id="close-menu"
+        >
+          <svg
+            width="24"
+            height="24"
+          >
+            <use href="./images/icons/symbol-defs.svg#icon-close"></use>
+          </svg>
+        </button>
+      </div>
+
+      <nav>
+        <ul class="mobile-menu__list">
+          <li>
+            <a
+              href="./"
+              class="mobile-menu__link"
+            >
+              Products
+            </a>
+          </li>
+          <li>
+            <a
+              href="./#about"
+              class="mobile-menu__link"
+            >
+              About Us
+            </a>
+          </li>
+          <li>
+            <a
+              href="./#bikes"
+              class="mobile-menu__link"
+            >
+              Blog
+            </a>
+          </li>
+
+          <li>
+            <a
+              href="./#contacts"
+              class="mobile-menu__link"
+            >
+              Contacts
+            </a>
+          </li>
+          <li>
+            <a
+              href="./#contacts"
+              class="second-link"
+            >
+              <svg
+                width="24"
+                height="24"
+              >
+                <use
+                  href="./images/icons/symbol-defs.svg#icon-phone"
+                  fill="currentColor"
+                ></use>
+              </svg>
+              Contacts us
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
+    <script
+      src="scripts/main.js"
+      type="module"
+    ></script>
   </body>
 </html>
